create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1918,7 +1918,7 @@ body {
   width: 100%;
 }
 .cid-rgNVBC5jl9 .media-container-row .mbr-text {
-  text-align: left;
+  text-align: center;
 }
 .cid-rgNVBC5jl9 .media-container-row .mbr-text P {
   text-align: center;
@@ -2557,7 +2557,7 @@ body {
   width: 100%;
 }
 .cid-rixrN19jVj .media-container-row .mbr-text {
-  text-align: left;
+  text-align: center;
 }
 .cid-rixrN19jVj .media-container-row .mbr-text P {
   text-align: center;
@@ -3135,7 +3135,7 @@ body {
   width: 100%;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text {
-  text-align: left;
+  text-align: center;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text P {
   text-align: center;
@@ -4183,7 +4183,7 @@ body {
   width: 100%;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text {
-  text-align: left;
+  text-align: center;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text P {
   text-align: center;
@@ -4894,7 +4894,7 @@ body {
   width: 100%;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text {
-  text-align: left;
+  text-align: center;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text P {
   text-align: center;
@@ -5534,7 +5534,7 @@ body {
   width: 100%;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text {
-  text-align: left;
+  text-align: center;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text P {
   text-align: center;
@@ -6130,7 +6130,7 @@ body {
   width: 100%;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text {
-  text-align: left;
+  text-align: center;
 }
 .cid-rixxRgJnFL .media-container-row .mbr-text P {
   text-align: center;
